--- a/sass/media/_laptopL.sass
+++ b/sass/media/_laptopL.sass
@@ -7,11 +7,11 @@
 			width: 500px
 		&__card
 			margin-right: 0
-	// .books
-	// 	&__wrapper
-	// 		flex-wrap: wrap
-	// .recommend
-	// 	margin-bottom: 60px
+	.books
+		&__wrapper
+			flex-wrap: wrap
+	.recommend
+		margin-bottom: 60px
 	// .top
 	// 	&__wrapper
 	// 		grid-template-columns: repeat(2, 1fr )
